--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,22 @@
-<% @user.recent_post.each do |post| %>
+<div class="card m-5">
+<div class="d-flex flex-direction-row">
+<div class="m-1"><%= image_tag @user.photo, :height => "150px", :width => "150px" %></div>
+<div class="m-5"><h1><%= @user.name%></h1>
+<p><%= @user.post_counter%></p></div>
+</div>
+</div>
 
+<div class="card m-5 p-3">
+<h4> Bio </h4>
+<p><%= @user.bio %></p>
+</div>
+<% @user.recent_post.each do |post| %>
+<div class="card m-5 p-3">
 <h3><%= post.title %></h3>
 <p><%= post.text %></p>
 <div>
   <span><%= post.comments_counter %></span>
   <span><%= post.likes_counter %></span>
+</div>
 </div>
 <% end %>
