--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,19 @@
 <% @users.each do |user|  %>
 
-<div class="card mb-2" >
-<div class="d-flex flex-direction-rows">
-<div class="m-5"><%= image_tag user.photo, :alt => "user_photo", :height => "150px", :width => "150px" %></div>
-<div class="m-5"><article class="card-body" style="width: 18rem;"> 
-<h1><%= user.name %></h1>
-<h2><%= user.post_counter %></h2>
-</article></div>
-</div>
-
-
-</div>
+  <div class="card mb-2" >
+    <div class="d-flex flex-direction-rows">
+      <div class="m-5">
+        <%= image_tag user.photo, :alt => "user_photo", :height => "150px", :width => "150px" %>
+      </div>
+      <div class="m-5">
+        <article class="card-body" style="width: 18rem;"> 
+          <h1><a><%= link_to user.name, user %></a>
+          </h1>
+          <h2><%= user.post_counter %>
+          </h2>
+        </article>
+      </div>
+    </div>
+  </div>
 
 <% end %>
