:card_file_box: Views
Set counter and like comments

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,4 +19,8 @@
   <span><%= post.likes_counter %></span>
 </div>
 </div>
+
 <% end %>
+<div class="d-flex justify-content-center pb-5">
+<button type="button" class="btn btn-primary"><%""%>See all posts</button>
+</div>
