--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,9 +13,9 @@
 <% @user.recent_post.each do |post| %>
 <div class="card m-5 p-3">
 <div class="d-flex justify-content-between">
-<div><h3><%= post.title %></h3>
+<div><h3><%= link_to post.title, user_post_path(post) %></h3>
 <p><%= post.text %></p></div>
-<div class="mb-1 mr-5 d-flex flex-wrap align-content-end">
+<div class="mb-1 mr-5 d-flex flex-direction-row flex-wrap align-content-end w-25">
   <span>Comments: <%= post.comments_counter %></span>
   <span class="ml-2">Likes: <%= post.likes_counter %></span>
 </div>
