--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,20 +6,27 @@
 </div>
 </div>
 
-<% @posts.each do |comment| %>
- <div class="card m-5"> 
- <div class="d-flex justify-content-between">
- <div> <h3><%= comment.title %></h3></div>
- <div> <p>Comment Body: <%= comment.text %></p> </div>
-
-  <div class="mb-1 mr-5 d-flex flex-direction-row flex-wrap align-content-end w-25">
-  <span>Comments: <%= post.comments_counter %></span>
-  <span class="ml-2">Likes: <%= post.likes_counter %></span>
-</div>
-</div>
+<% @posts.each do |post| %>
+  <div class="card m-5"> 
+    <div class="d-flex justify-content-between">
+      <div> 
+        <h2><%= post.title %></h2> 
+        <p>Post Body: <%= post.text %></p>
+        <div class="mb-1 mr-5 d-flex flex-direction-row flex-wrap align-content-end w-25">
+          <span>Comments count: <%= post.comments_counter %></span>
+          <span class="ml-2">Likes Count: <%= post.likes_counter %></span>
+        </div>
+        <div>
+    <h4>Comments:</h4>
+    <div>
+      <% post.recent_comments.each do |comment| %>
+        <p><%= comment.author.name %>: <%= comment.text %></p>
+      <% end %>
+    </div>
   </div>
-  <div>
-  <span><%= comment.author.name %></span>
-  <span><%= comment.text %></span>
+
+      </div>
+    </div>
   </div>
 <% end %>
+
