--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,25 +8,31 @@
 
 <% @posts.each do |post| %>
   <div class="card m-5"> 
-    <div class="d-flex justify-content-between">
+    <div class="justify-content-between">
       <div> 
+      <div>
         <h2><%= post.title %></h2> 
-        <p>Post Body: <%= post.text %></p>
-        <div class="mb-1 mr-5 d-flex flex-direction-row flex-wrap align-content-end w-25">
-          <span>Comments count: <%= post.comments_counter %></span>
-          <span class="ml-2">Likes Count: <%= post.likes_counter %></span>
+        <p><%= post.text %></p>
         </div>
-        <div>
-    <h4>Comments:</h4>
+        <div class="mb-3 mr-5 float-right">
+          <span>Comments: <%= post.comments_counter %></span>
+          <span class="ml-2">Likes: <%= post.likes_counter %></span>
+        </div>
+        
+        </div>
+        </div>
+        </div>
+        
+    
+    <div class="card m-5"> 
     <div>
+    <div class="m-3">
       <% post.recent_comments.each do |comment| %>
         <p><%= comment.author.name %>: <%= comment.text %></p>
       <% end %>
     </div>
   </div>
-
-      </div>
-    </div>
-  </div>
+</div>
+  
 <% end %>
 
