--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,26 @@
-<h2><%= @post.title %> by <%= @post.author.name %></h2>
-<div class="p-3">
-  <p>Comments: <%= @post.comments.size %></p>
-  <p>Likes: <%= @post.likes.size %></p>
+<div class="card m-5"> 
+    <div class="justify-content-between">
+      <div> 
+      <div>
+        <h2><%= @post.title %> by <%= @post.author.name %></h2>
+        </div>
+        <div class="mb-3 mr-5 float-right">
+          <span>Comments: <%= @post.comments.size %></span>
+          <span>Likes: <%= @post.likes.size %></span>
+        </div>
+        <br>
+        <div class="d-block"><p><%= @post.text %></p></div>
+        </div>
+        </div>
+        </div>
+        
+    
+    <div class="card m-5"> 
+    <div>
+    <div class="m-3">
+      <% @post.recent_comments.each do |comment| %>
+        <p><%= comment.author.name %>: <%= comment.text %></p>
+      <% end %>
+    </div>
+  </div>
 </div>
-
-<% @post.recent_comments.each do |comment| %>
-  <p>Comment Body: <%= comment.text %></p>
-<% end %>
