--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,15 +14,17 @@
         <h2><%= post.title %></h2> 
         <p><%= post.text %></p>
         </div>
+        <div class="">
         <div class="mb-3 mr-5 float-right">
           <span>Comments: <%= post.comments_counter %></span>
           <span class="ml-2">Likes: <%= post.likes_counter %></span>
         </div>
-        <div class="">
+        <div class="d-flex justify-content-end">
           <%= link_to "Add comment", new_user_post_comment_path(user_id: post.author_id, post_id: post.id ), class: "btn btn-info" %>
           <%= form_with model: @like, url: user_post_likes_path(post_id: post.id) do |form| %>
           <%= form.submit "Add Like", class: "btn-info" %>
         <% end %>
+    </div>
     </div>
 
         
