--- a/app/views/share/_navbar.html.erb
+++ b/app/views/share/_navbar.html.erb
@@ -10,7 +10,10 @@
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/users/id">Link</a>
+        <a class="nav-link" href="/users/2/posts">See All Posts</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/users">See All Users</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -24,7 +27,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/users/:user_id/posts/:id" tabindex="-1" >Add New Post</a>
+        <a class="nav-link" href="/users/user_id/posts/new" tabindex="-1" >Add New Post</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
