--- a/app/views/share/_navbar.html.erb
+++ b/app/views/share/_navbar.html.erb
@@ -10,10 +10,10 @@
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/users/2/posts">See All Posts</a>
+        <a class="nav-link" href="/users/1/posts" tabindex="-1" >See All Posts</a>
       </li>
       <li class="nav-item active">
-       <%= link_to "See all users", users_path, class: "nav-link" %>
+       <a class="nav-link" href="/users" tabindex="-1" >See All Users</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
