--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,7 @@
 <div class="card mb-2" >
     <div class="d-flex justify-content-between mb-3">
       <div class="m-5">
-        <%= image_tag user.photo, :alt => "user_photo", :height => "150px", :width => "150px" %>
+        <%# <%= image_tag user.photo, :alt => "user_photo", :height => "150px", :width => "150px" %> 
       </div>
       <div class="m-5 flex-grow-1">
         <article class="card-body " style="width: 18rem;"> 
