--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,21 +1,13 @@
+<div class="m-5 d-flex justify-content-center">
 <h2>Sign up</h2>
+</div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
-
+<div class="m-5">
   <div class="field">
     <%= f.label :name %><br />
     <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :photo %><br />
-    <%= f.text_field :photo, autocomplete: "photo" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :bio %><br />
-    <%= f.text_area(:bio, size: '50x10') %>
   </div>
 
   <div class="field">
@@ -38,6 +30,7 @@
 
   <div class="actions">
     <%= f.submit "Sign up" %>
+  </div>
   </div>
 <% end %>
 
