:bug: Forgery permission
fixed forgery permission issues

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
 <div class="mb-2 mr-5 d-flex">
 <h6> - Wrote <%= @user.post_counter%> Posts</h6>
 </div>
-<button type="button" class="btn btn-info shadow rounded"><%= link_to "Add Post", new_user_post_path(user_id: @user.id), class: "btn-info" %></button>
+<button type="button" class="btn btn-info shadow rounded"><%= link_to "Add Post", new_user_post_path(@user), class: "btn-info" %></button>
 </div>
 </div>
 </div>
@@ -27,6 +27,7 @@
 <div class="mb-1 mr-5 d-flex flex-direction-row flex-wrap align-content-end w-25">
   <span>Comments: <%= post.comments_counter %></span>
   <span class="ml-2">Likes: <%= post.likes_counter %></span>
+   <button type="button" class="btn btn-info shadow rounded"><%= link_to'Delete', users_path(@post), :method => :delete, data: { confirm: "Are you sure?" }, class: "btn-info" %></button>
 </div>
 </div>
 </div>
@@ -34,7 +35,7 @@
 <% end %>
 <div class="d-flex justify-content-center pb-5">
 
-
-<button type="button" class="btn btn-info shadow rounded"><%= link_to "See all posts", user_posts_path(user_id: @user.id), class: "btn-info" %></button>
-<button type="button" class="btn btn-info shadow rounded"><%= link_to "See all users", users_path, class: "btn-info" %></button>
+  <button type="button" class="btn btn-info shadow rounded"><%= link_to "See all posts", user_posts_path(user_id: @user.id), class: "btn-info" %></button>
+  <button type="button" class="btn btn-info shadow rounded"><%= link_to "See all users", users_path, class: "btn-info" %></button>
+  
 </div>
