--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <div class="card m-5">
 <div class="d-flex justify-content-between">
-<div class="m-1"><%= image_tag @user.photo, :height => "150px", :width => "150px" %></div>
+<%# < class="m-1"><%= image_tag @user.photo, :height => "150px", :width => "150px" %>
 <div class="m-5 flex-grow-1"><h1><%= @user.name %></h1></div>
 <div class="mb-2 mr-5 d-flex flex-wrap align-content-end"><h5>Number of Posts: <%= @user.post_counter%></h5></div>
 </div>
@@ -39,6 +39,7 @@
       <% post.recent_comments.includes(:author).each do |comment| %>
 
         <p><%= comment.author.name %>: <%= comment.text %></p>
+        <%= button_to "Delete", user_post_comment_path(author_id: comment.author_id, post_id: comment.post_id,  id: comment.id), method: :delete, class: 'btn btn-danger' if can? :destroy, comment %>
       <% end %>
     </div>
   </div>
