--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,7 +22,7 @@
     <div class="m-3">
       <% @post.recent_comments.includes(:author).each do |comment| %>
         <p><%= comment.author.name %>: <%= comment.text %></p>
-        <%= button_to "Delete", user_post_comment_path(author_id: comment.author_id, post_id: comment.post_id,  id: comment.id), method: :delete, class: 'btn btn-danger' if can? :destroy, comment %>
+        <%= button_to "Delete Comment", user_post_comment_path(author_id: comment.author_id, post_id: comment.post_id,  id: comment.id), method: :delete, class: 'btn btn-danger' if can? :destroy, comment %>
 
       <% end %>
     </div>
