--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <div class="card m-5">
 <div class="d-flex justify-content-between">
-<%# < class="m-1"><%= image_tag @user.photo, :height => "150px", :width => "150px" %>
+<div class="m-1"><%= image_tag @user.photo, :height => "150px", :width => "150px" %></div>
 <div class="m-5 flex-grow-1"><h1><%= @user.name %></h1></div>
 <div class="mb-2 mr-5 d-flex flex-wrap align-content-end"><h5>Number of Posts: <%= @user.post_counter%></h5></div>
 </div>
@@ -24,13 +24,11 @@
           <%= form_with model: @like, url: user_post_likes_path(post_id: post.id) do |form| %>
           <%= form.submit "Add Like", class: "btn-info ml-2" %>
         <% end %>
+        </div>
+      </div>
     </div>
     </div>
-
-        
-        </div>
-        </div>
-        </div>
+  </div>
         
     
     <div class="card m-5"> 
