--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,7 @@
 <div class="card m-5">
 <div class="d-flex justify-content-between">
-<%# <div class="m-1"><%= image_tag @user.photo, :height => "150px", :width => "150px"</div> %>
-<div class="m-1"><img src=<%= @user.photo %> alt="<%= @user.name%>'s profile picture" />
-</div>
+<div class="m-1"><%= image_tag @user.photo, :height => "150px", :width => "150px" %></div>
+
 <div class="m-2 flex-grow-1">
 <div ><h3><%= @user.name%></h3></div>
 <h5><%= @user.bio %></h5>
