--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,8 @@
     <div class="justify-content-between">
       <div> 
       <div>
-        <h2><%= post.title %></h2> 
+        <h2><%= link_to post.title, user_post_path(user_id: post.author_id, id: post.id
+) %></h2> 
         <p><%= post.text %></p>
         </div>
         <div class=" float-right">
@@ -44,4 +45,12 @@
 </div>
   
 <% end %>
+
+<div class="d-flex justify-content-center pb-5">
+
+  <button type="button" class="btn btn-info shadow rounded"><%= link_to "See all posts", user_posts_path(user_id: @user.id), class: "btn-info" %></button>
+  <button type="button" class="btn btn-info shadow rounded"><%= link_to "See all users", users_path, class: "btn-info" %></button>
+  
+</div>
+
 
