:test_tube: TDD
Fixed test bug

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,6 +34,7 @@
 
 <div class="d-flex justify-content-center pb-5">
 
+  <button type="button" class="btn btn-info shadow rounded"><%= link_to "Pagination", user_posts_path(user_id: @user.id), class: "btn-info" %></button>
   <button type="button" class="btn btn-info shadow rounded"><%= link_to "See all posts", user_posts_path(user_id: @user.id), class: "btn-info" %></button>
   <button type="button" class="btn btn-info shadow rounded"><%= link_to "See all users", users_path, class: "btn-info" %></button>
   
